--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,3 @@
-name = "google-auth-proxy" # This will be the name of your worker
+name = "ges" # This will be the name of your worker
 main = "src/index.js"
 compatibility_date = "2024-10-30"
